--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <meta property='og:title' content='JustinandJecery' />
-    <meta property='og:image' content='images/thumb.jpg' />
+    <meta property='og:image' content='images/lax.jpg' />
     <meta property='og:description' content='Wedding at December 15, 2022' />
     <meta property='og:url' content='justinandjecery.vercel.app' />
     <meta property='og:image:width' content='1200' />
@@ -182,7 +182,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-lg-8">
                 <div class="vid_container text-center pt-5">
-                    <iframe class="video" src="https://streamable.com/e/qov1mt?autoplay=1&loop=0" allowfullscreen allow="autoplay">
+                    <iframe class="video" src="https://streamable.com/e/qov1mt?autoplay=1&loop=0&muted=0&hd=1&nocontrols=1"  allowfullscreen allow="autoplay">
                     </iframe>
                 </div>
             </div>
