--- a/registry.html
+++ b/registry.html
@@ -17,7 +17,7 @@
     
     
         <meta property='og:title' content='JustinandJecery' />
-        <meta property='og:image' content='images/thumb.jpg' />
+        <meta property='og:image' content='images/lax.jpg' />
         <meta property='og:description' content='Wedding at December 15, 2022' />
         <meta property='og:url' content='justinandjecery.vercel.app' />
         <meta property='og:image:width' content='1200' />
