--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-lg-8">
                 <div class="vid_container text-center pt-5">
-                    <iframe class="video" src="https://streamable.com/e/qov1mt?autoplay=1&loop=0&muted=0&hd=1&nocontrols=1"  allowfullscreen allow="autoplay">
+                    <iframe class="video" src="https://streamable.com/e/qov1mt?autoplay=1&loop=0&hd=1"  allowfullscreen allow="autoplay">
                     </iframe>
                 </div>
             </div>
