background of video area

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     <div class="container-fluid py-5 text-center bg-cover"
-        style="background-image: url(images/bg-footer-100.png);">
+        style="background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.8)), url(images/bg-footer-100.png);">
         <h1 class="f-Sacramento fs-invited">A Story of Us</h1>
         <p class="fs-3">Watch our small video to get a glimpse of our travels through our years!</p>
         <div class="row d-flex justify-content-center">
