ewan, final na ba talaga to

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
                 <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
                     <ul class="navbar-nav  mb-lg-0 text-center ps-4">
                         <li class="nav-item text-nowrap ">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white text-muted disabled" href="https://justinandjecery.vercel.app">Home</a>
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-muted disabled text-white-rose" href="https://justinandjecery.vercel.app">Home</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white" href="registry.html">Gift
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white-rose" href="registry.html">Gift
                                 Registry</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white"
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white-rose"
                                 href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white"
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white-rose"
                                 href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -131,7 +131,7 @@
                         <div class="col-6">
                             <i class="fs-2 fa fa-location-arrow"></i>
                             <br>
-                            <button class="btn mt-1 p-2 text-white border border-1" id="churchLoc"
+                            <button class="btn mt-1 p-2 text-white border border-1 btnhov" id="churchLoc"
                                 onclick="locationSwitch(id);" data-bs-toggle="modal"
                                 data-bs-target="#locationModal">Church
                                 Location</button>
@@ -157,7 +157,7 @@
                         <div class="col-6">
                             <i class="fs-2 fa fa-location-arrow"></i>
                             <br>
-                            <button class="btn mt-1 p-2 text-white border border-1" id="verandaLoc"
+                            <button class="btn mt-1 p-2 text-white border border-1 btnhov" id="verandaLoc"
                                 onclick="locationSwitch(id);" data-bs-toggle="modal"
                                 data-bs-target="#locationModal">Party
                                 Location</button>
