--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="row d-flex justify-content-center text-center">
                         <div class="col-10">
                             <p class="">Party starts at 12:00pm! Food, games, pictorials spiced with an amazing
-                                host.<br>See you there!</p>
+                                host. See you there!</p>
                         </div>
                     </div>
                 </div>
