loading screen effect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
     <meta property="og:type" content='website'/>
 </head>
 
-<body>
+<body id="bod">
+<div id="loadingScreen" class="loadingScreen position-absolute 100-vh w-100" style="background-image: url(images/bg-story.png);">
+    <img class="loadingLogo" src="images/logo-rose.png" alt="">
+    <div class="invitation position-absolute">
+    <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento ">Invites you to their wedding</h1>
+    <p class="text-center npm fs-4">December 15th, 2022</p>
+    <p class="text-center npm fs-4">Our Lady of the Assumption Quasi-Parish</p>
+    <p class="text-center npm fs-4">Tagum City, Davao del Norte</p>
+</div>
+</div>
+
+
 
     <header class="header vh-100 bg-cover bg-dark" style="background-image: url(images/cover.png); ">
         <nav class="navbar bg-dark navbar-expand-lg pt-md-5 pb-md-5 bg-opacity-75">
