intro text edit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
     <link rel="stylesheet" href="css/style.css">
 
-
     <meta property='og:title' content='JustinandJecery' />
     <meta property='og:image' content='images/lax.jpg' />
     <meta property='og:description' content='Wedding at December 15, 2022' />
@@ -25,10 +24,11 @@
     <meta property="og:type" content='website'/>
 </head>
 
-<body id="bod">
+<body>
 <div id="loadingScreen" class="loadingScreen position-absolute 100-vh w-100" style="background-image: url(images/bg-story.png);">
-    <img class="loadingLogo" src="images/logo-rose.png" alt="">
     <div class="invitation position-absolute">
+        <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento text-nowrap">Justin & Jecery</h1>
+
     <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento ">Invites you to their wedding</h1>
     <p class="text-center npm fs-4">December 15th, 2022</p>
     <p class="text-center npm fs-4">Our Lady of the Assumption Quasi-Parish</p>
