--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <body>
 <div id="loadingScreen" class="loadingScreen position-absolute 100-vh w-100" style="background-image: url(images/bg-story.png);">
     <div class="invitation position-absolute">
-        <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento text-nowrap">Justin & Jecery</h1>
+        <h1 class="text-center fs-couple text-color-rose mt-3 f-Sacramento text-nowrap">Justin & Jecery</h1>
 
-    <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento ">Invites you to their wedding</h1>
-    <p class="text-center npm fs-4">December 15th, 2022</p>
-    <p class="text-center npm fs-4">Our Lady of the Assumption Quasi-Parish</p>
-    <p class="text-center npm fs-4">Tagum City, Davao del Norte</p>
+    <h1 class="text-center fs-intro text-color-rose mt-3 f-Sacramento text-nowrap">Invites you to their wedding</h1>
+    <p class="text-center fs-4">December 15th, 2022</p>
+    <p class="text-center fs-4">Our Lady of the Assumption Quasi-Parish</p>
+    <p class="text-center fs-4">Tagum City, Davao del Norte</p>
 </div>
 </div>
 
